--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+
+.holder {
+    display: flex; 
+    justify-content: space-around;
+    align-items: stretch; 
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 70px;
+    height: 70px;
+    background-color: aliceblue;
+    border-radius: 2px solid blue;
+}
